@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "30 November 2013" "" ""
+.TH TURN 1 "02 December 2013" "" ""
 .SH GENERAL INFORMATION
 
 A set of turnutils_* programs provides some utility functionality to be used
@@ -164,7 +164,7 @@ Message length (Default: 100 Bytes).
 .TP
 .B
 \fB\-i\fP
-Certificate file (for secure connections only).
+Certificate file (for secure connections only, optional).
 .TP
 .B
 \fB\-k\fP
