@@ -1,6 +1,8 @@
 12/XX/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.0.2.2 'Practical Frost':
 	- atomic stdout log print.
+	- printed help minor fix.
+	- client program does not require certificate for TLS.
 
 11/29/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.0.2.1 'Practical Frost':
